fix wordbreak on sidebar

--- a/app/assets/stylesheets/layouts/projects/_common.sass
+++ b/app/assets/stylesheets/layouts/projects/_common.sass
@@ -18,6 +18,7 @@
 
   .project-meta
     margin-bottom: 0.5em
+    word-break: break-word
 
   /*-----------  Listing Overview  -----------*/
 
